--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -191,6 +191,18 @@
               <a routerLink="/curation/queues">Queues</a>
             </span>
           </li>
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Statistics' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="line-chart"></i>
+            <span>
+              <a routerLink="/curation/stats">Statistics</a>
+            </span>
+          </li>
         </ul>
       </li>
       <li nz-menu-group
