--- a/client/src/app/views/evidence/evidence-detail/evidence-detail.view.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-detail.view.html
@@ -95,6 +95,11 @@
           nzBanner
           nzMessage="This Evidence Item is in a 'submitted' state and has not yet been reviewed by an editor."
           nzType="warning"></nz-alert>
+        <nz-alert *ngIf="this.evidence.status == 'REJECTED'"
+          nzBanner
+          nzMessage="This Evidence Item has been rejected."
+          nzType="error">
+        </nz-alert>
         <cvc-tab-navigation [tabs]="this.tabs$ | ngrxPush">
           <ng-template #tabBarExtraContent>
             <nz-col id="contributors-col">
