--- a/client/src/app/views/curation/curation-stats/curation-charts/curation-charts.page.html
+++ b/client/src/app/views/curation/curation-stats/curation-charts/curation-charts.page.html
@@ -1,22 +1,22 @@
 <div nz-row>
   <div nz-col nzSpan="14">
-    <div *ngIf="barChartData">
+    <div *ngIf="geneBarChartData">
       <canvas
         baseChart
         [options]="barOptions"
-        [data]="barChartData"
-        (chartClick)="chartClicked($event)"
+        [data]="geneBarChartData"
+        (chartClick)="geneChartClicked($event)"
         type="bar">
       </canvas>
     </div>
   </div>
   <div nz-col nzSpan="2"></div>
   <div nz-col nzSpan="8">
-    <div *ngIf="doughnutChartData" style="display: block; width: 300px">
+    <div *ngIf="geneDoughnutChartData" style="display: block; width: 300px">
       <canvas baseChart
         [options]="doughnutOptions"
-        [data]="doughnutChartData"
-        (chartClick)="chartClicked($event)"
+        [data]="geneDoughnutChartData"
+        (chartClick)="geneChartClicked($event)"
         type="doughnut">
       </canvas>
       <div style="text-align: center; margin-top: -200px">
@@ -26,3 +26,64 @@
     </div>
   </div>
 </div>
+
+<div nz-row>
+  <div nz-col nzSpan="14">
+    <div *ngIf="eidBarChartData">
+      <canvas
+        baseChart
+        [options]="barOptions"
+        [data]="eidBarChartData"
+        (chartClick)="evidenceTypeChartClicked($event)"
+        type="bar">
+      </canvas>
+    </div>
+  </div>
+  <div nz-col nzSpan="2"></div>
+  <div nz-col nzSpan="8">
+    <div *ngIf="eidDoughnutChartData" style="display: block; width: 300px">
+      <canvas baseChart
+        [options]="doughnutOptions"
+        [data]="eidDoughnutChartData"
+        (chartClick)="evidenceTypeChartClicked($event)"
+        type="doughnut">
+      </canvas>
+      <div style="text-align: center; margin-top: -180px">
+        <nz-statistic [nzValue]="this.eidCount" nzTitle="Evidence Items"></nz-statistic>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div nz-row style="height: 300px">
+  <ng-container *ngIf="csBarChartData && csDoughnutChartData; else noCS">
+    <div nz-col nzSpan="14">
+      <canvas
+        baseChart
+        [options]="barOptions"
+        [data]="csBarChartData"
+        type="bar">
+      </canvas>
+    </div>
+    <div nz-col nzSpan="2"></div>
+    <div nz-col nzSpan="8">
+      <div style="display: block; width: 300px">
+        <canvas
+          baseChart
+          [options]="doughnutOptions"
+          [data]="csDoughnutChartData"
+          type="doughnut">
+        </canvas>
+        <div style="text-align: center; margin-top: -180px">
+          <nz-statistic [nzValue]="this.eidCountForType" nzTitle="{{this.selectedEvidenceType}} Evidence Items"></nz-statistic>
+        </div>
+      </div>
+    </div>
+  </ng-container>
+</div>
+<ng-template #noCS>
+  <div style="width: 100%; height: 100%; text-align: center; display: flex;
+  justify-content: center; align-items: center;">
+    Select an Evidence Type in the charts above to see more details.
+  </div>
+</ng-template>
