--- a/client/src/app/views/curation/curation-stats/curation-charts/curation-charts.page.html
+++ b/client/src/app/views/curation/curation-stats/curation-charts/curation-charts.page.html
@@ -1,129 +1,138 @@
-<div nz-row>
-  <div nz-col nzSpan="14">
-    <div *ngIf="geneBarChartData">
-      <canvas
-        baseChart
-        [options]="barOptions"
-        [data]="geneBarChartData"
-        (chartClick)="geneChartClicked($event)"
-        type="bar">
-      </canvas>
-    </div>
+<div nz-row *ngIf="this.geneData">
+  <ngx-charts-advanced-pie-chart
+    [view]="[1400, 250]"
+    [results]="this.geneData"
+    label="Variants covering {{this.geneCount}} Genes"
+    [scheme]="'forest'"
+    (select)="geneChartClicked($event)"
+    >
+  </ngx-charts-advanced-pie-chart>
+</div>
+
+<div nz-row *ngIf="this.statusData && this.levelData && this.ratingData">
+  <div nz-col nzSpan="8" style="display: flex; align-items: center; justify-content: center;">
+    <ngx-charts-pie-chart
+      [view]="[150, 150]"
+      [results]="this.statusData"
+      [scheme]="'forest'"
+      [doughnut]="true"
+      >
+    </ngx-charts-pie-chart>
+    <h4 nz-typography style="margin-left: -100px">Status</h4>
   </div>
-  <div nz-col nzSpan="2"></div>
-  <div nz-col nzSpan="8">
-    <div *ngIf="geneDoughnutChartData" style="display: block; width: 300px">
-      <canvas baseChart
-        [options]="doughnutOptions"
-        [data]="geneDoughnutChartData"
-        (chartClick)="geneChartClicked($event)"
-        type="doughnut">
-      </canvas>
-      <div style="text-align: center; margin-top: -200px">
-        <nz-statistic [nzValue]="this.geneCount" nzTitle="Genes"></nz-statistic>
-        <span nz-typography nzType="secondary">covering<br/>{{this.variantCount}} Variants</span>
-      </div>
-    </div>
+  <div nz-col nzSpan="8" style="display: flex; align-items: center; justify-content: center;">
+    <ngx-charts-pie-chart
+      [view]="[150, 150]"
+      [results]="this.levelData"
+      [scheme]="'forest'"
+      [doughnut]="true"
+      >
+    </ngx-charts-pie-chart>
+    <h4 nz-typography style="margin-left: -100px">Level</h4>
+  </div>
+  <div nz-col nzSpan="8" style="display: flex; align-items: center; justify-content: center; text-align: center">
+    <ngx-charts-pie-chart
+      [view]="[150, 150]"
+      [results]="this.ratingData"
+      [scheme]="'forest'"
+      [doughnut]="true"
+      >
+    </ngx-charts-pie-chart>
+    <h4 nz-typography style="margin-left: -100px">Rating</h4>
   </div>
 </div>
 
-<div nz-row>
-  <div nz-col nzSpan="10">
-    <div *ngIf="eidBarChartData">
-      <canvas
-        baseChart
-        [options]="barOptions"
-        [data]="eidBarChartData"
-        (chartClick)="evidenceTypeChartClicked($event)"
-        type="bar">
-      </canvas>
-    </div>
-  </div>
-  <div nz-col nzSpan="1"></div>
-  <div nz-col nzSpan="6">
-    <div *ngIf="eidDoughnutChartData" style="display: block; width: 300px">
-      <canvas baseChart
-        [options]="doughnutOptions"
-        [data]="eidDoughnutChartData"
-        (chartClick)="evidenceTypeChartClicked($event)"
-        type="doughnut">
-      </canvas>
-      <div style="text-align: center; margin-top: -180px">
-        <nz-statistic [nzValue]="this.eidCount" nzTitle="Evidence Items"></nz-statistic>
-      </div>
-    </div>
-  </div>
-  <div nz-col nzSpan="1"></div>
-  <div nz-col nzSpan="6">
-    <div nz-row>
-      <div *ngIf="levelDoughnutchartData" style="display: block; width: 130px;">
-        <canvas baseChart
-          [options]="doughnutOptions"
-          [data]="levelDoughnutchartData"
-          type="doughnut">
-        </canvas>
-        <div style="text-align: center; margin-top: -80px;">
-          <nz-statistic nzValue="Levels" ></nz-statistic>
-        </div>
-      </div>
-    </div>
-    <div nz-row>
-      <div *ngIf="levelDoughnutchartData" style="display: block ; width: 130px; margin-top: 90px;">
-
-        <canvas baseChart
-          [options]="doughnutOptions"
-          [data]="ratingDoughnutchartData"
-          type="doughnut">
-        </canvas>
-        <div style="text-align: center; margin-top: -80px; margin-bottom: 80px;">
-          <nz-statistic nzValue="Ratings" ></nz-statistic>
-        </div>
-      </div>
-    </div>
-  </div>
+<div nz-row *ngIf="this.eidData">
+  <ngx-charts-advanced-pie-chart
+    [view]="[1400, 250]"
+    [results]="this.eidData"
+    label="Evidence Items"
+    [scheme]="'forest'"
+    (select)="evidenceTypeChartClicked($event)"
+    >
+  </ngx-charts-advanced-pie-chart>
 </div>
 
-<div nz-row style="height: 300px">
-  <ng-container *ngIf="csDoughnutChartData; else noCS">
-    <div nz-col nzSpan="24">
-      <div style="width: 300px; position: relative; margin: 0 auto">
-        <canvas
-          baseChart
-          [options]="doughnutOptions"
-          [data]="csDoughnutChartData"
-          type="doughnut">
-        </canvas>
-        <div style="text-align: center; margin-top: -180px">
-          <nz-statistic [nzValue]="this.eidCountForType" nzTitle="{{this.selectedEvidenceType}} Evidence Items"></nz-statistic>
-        </div>
-      </div>
-    </div>
-  </ng-container>
+<div nz-row *ngIf="this.csData; else noCS">
+  <ngx-charts-advanced-pie-chart
+    [view]="[1400, 250]"
+    [results]="this.csData"
+    label="{{this.selectedEvidenceType}} Evidence Items"
+    [scheme]="'forest'"
+    >
+  </ngx-charts-advanced-pie-chart>
 </div>
-<div nz-row style="height: 300px">
-  <ng-container *ngIf="csDoesNotSupportBarChartData && csSupportBarChartData">
-    <div nz-col nzSpan="12" style="height: 300px">
-      <canvas
-        baseChart
-        [options]="csLeftBarOptions"
-        [data]="csDoesNotSupportBarChartData"
-        type="bar">
-      </canvas>
-    </div>
-    <div nz-col nzSpan="12" style="height: 300px">
-      <canvas
-        baseChart
-        [options]="csRightBarOptions"
-        [data]="csSupportBarChartData"
-        type="bar">
-      </canvas>
-    </div>
-  </ng-container>
+<div nz-row *ngIf="this.csSupportData">
+  <ngx-charts-bar-horizontal-2d
+    [view]="[1400, 250]"
+    [results]="this.csSupportData"
+    [scheme]="'vivid'"
+    [legend]="true"
+    [legendTitle]="''"
+    [xScaleMax]="3000"
+    [xAxis]="true"
+    [yAxis]="true"
+    [maxYAxisTickLength]="100"
+    >
+  </ngx-charts-bar-horizontal-2d>
 </div>
-
 <ng-template #noCS>
-  <div style="width: 100%; height: 100%; text-align: center; display: flex;
+  <div style="width: 1400px; height: 500px; text-align: center; display: flex;
   justify-content: center; align-items: center;">
     Select an Evidence Type in the charts above to see more details.
   </div>
 </ng-template>
+
+<div nz-row *ngIf="this.diseaseData">
+  <ngx-charts-advanced-pie-chart
+    [view]="[1400, 250]"
+    [results]="this.diseaseData"
+    label="Evidence Items covering {{this.diseaseCount}} Diseases"
+    [scheme]="'forest'"
+    (select)="diseaseChartClicked($event)"
+    >
+  </ngx-charts-advanced-pie-chart>
+  <ngx-charts-gauge
+    [view]="[1000, 500]"
+    [results]="this.diseaseData"
+    [legend]="true"
+    legendTitle=""
+    [scheme]="'forest'"
+    [max]="2500"
+    units="Evidence Items"
+    (select)="diseaseChartClicked($event)"
+    >
+  </ngx-charts-gauge>
+</div>
+<div nz-row *ngIf="this.diseaseData">
+  <div nz-col span="6">
+
+  <ngx-charts-pie-chart
+    [view]="[300, 300]"
+    [results]="this.diseaseData"
+    [scheme]="'forest'"
+    [doughnut]="true"
+    >
+  </ngx-charts-pie-chart>
+  </div>
+  <div nz-col span="2"></div>
+  <div nz-col span="16">
+  <ngx-charts-number-card
+    [view]="[1000, 300]"
+    [results]="this.diseaseData"
+    [scheme]="'forest'"
+    cardColor="#F0F0F0"
+    (select)="diseaseChartClicked($event)">
+  </ngx-charts-number-card>
+  </div>
+</div>
+
+<div nz-row *ngIf="this.ampCategoryData">
+  <ngx-charts-advanced-pie-chart
+    [view]="[1400, 250]"
+    [results]="this.ampCategoryData"
+    label="Assertions"
+    [scheme]="'forest'"
+    >
+  </ngx-charts-advanced-pie-chart>
+</div>
