--- a/client/src/app/views/assertions/assertions-detail/assertions-detail.view.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-detail.view.html
@@ -105,6 +105,18 @@
           nzMessage="This Assertion has been rejected."
           nzType="error">
         </nz-alert>
+        <nz-alert *ngIf="!this.assertion.valid"
+          nzBanner
+          [nzMessage]="validationErrorTpl"
+          nzType="warning">
+        </nz-alert>
+        <ng-template #validationErrorTpl>
+          This Assertion is in an invalid state.
+          <br/>
+          <span nzTypographq *ngFor="let error of this.assertion.validationErrors">
+            <strong>Field</strong>: {{error.fieldName}}. <strong>Error</strong>: {{error.error}}<br/>
+          </span>
+        </ng-template>
         <cvc-tab-navigation [tabs]="this.tabs$ | ngrxPush">
           <ng-template #tabBarExtraContent>
             <nz-col id="contributors-col">
