--- a/client/src/app/components/shared/attribute-tag/attribute-tag.component.html
+++ b/client/src/app/components/shared/attribute-tag/attribute-tag.component.html
@@ -1,5 +1,5 @@
 <nz-tag>
   <i nz-icon
-    [nzType]="cvcAttrValue | evidenceEnumDisplay: 'icon-name'"></i>
+    [nzType]="cvcAttrValue | evidenceEnumDisplay: 'icon-name':this.iconPropertyType"></i>
   {{ cvcAttrValue | evidenceEnumDisplay }}
 </nz-tag>
