--- a/client/src/app/components/assertions/assertions-table/assertions-table.component.html
+++ b/client/src/app/components/assertions/assertions-table/assertions-table.component.html
@@ -342,7 +342,7 @@
               nzTooltipPlacement="top"
               [nzTooltipTitle]="!isScrolling ? (aid.assertionType | evidenceEnumDisplay) : ''">
               <i nz-icon
-                [nzType]="aid.assertionType | evidenceEnumDisplay: 'icon-name'"
+                [nzType]="aid.assertionType | evidenceEnumDisplay: 'icon-name':'type'"
                 class="attribute-icon"></i>
             </nz-tag>
           </td>
@@ -362,7 +362,7 @@
               nzTooltipPlacement="top"
               [nzTooltipTitle]="!isScrolling ? (aid.clinicalSignificance | evidenceEnumDisplay) : ''">
               <i nz-icon
-                [nzType]="aid.clinicalSignificance| evidenceEnumDisplay: 'icon-name'"
+                [nzType]="aid.clinicalSignificance| evidenceEnumDisplay: 'icon-name':'clinical-significance'"
                 class="attribute-icon"></i>
             </nz-tag>
           </td>
