--- a/client/src/app/forms/assertion-revise/assertion-revise.form.html
+++ b/client/src/app/forms/assertion-revise/assertion-revise.form.html
@@ -6,7 +6,7 @@
     nzLayout="vertical">
     <ng-container *ngTemplateOutlet="formMessages"></ng-container>
 
-    <formly-form *ngIf="!this.success" [form]="formGroup"
+    <formly-form *ngIf="!this.success && !this.noNewRevisions" [form]="formGroup"
       [fields]="formFields"
       [model]="formModel"
       [options]="formOptions"
@@ -21,7 +21,7 @@
         </cvc-form-errors-alert>
       </nz-form-item>
     </ng-container>
-    <ng-container *ngIf="this.success">
+    <ng-container *ngIf="this.success && !this.noNewRevisions">
       <nz-alert nzType="success"
         nzMessage="Suggested Revision Submitted"
         [nzDescription]="successMessage"
@@ -32,6 +32,16 @@
       </ng-template>
     </ng-container>
   </ng-template>
+  <ng-container *ngIf="this.noNewRevisions">
+    <nz-alert nzType="warning"
+      nzMessage="No New Revisions Created"
+      [nzDescription]="duplicateMessage"
+      nzShowIcon></nz-alert>
+    <ng-template #duplicateMessage
+      nzSize="small">
+      <p>Your submission succeeded but no new revisions were created. Identical ones already exist, view them on the <a routerLink="../../revisions">Revisions Page</a>.</p>
+    </ng-template>
+  </ng-container>
 </nz-spin>
 
 <!-- <div nz-row>
