--- a/client/src/app/forms/variant-group-revise/variant-group-revise.form.html
+++ b/client/src/app/forms/variant-group-revise/variant-group-revise.form.html
@@ -5,7 +5,7 @@
   nzLayout="vertical">
  <ng-container *ngTemplateOutlet="formMessages"></ng-container>
 
-  <formly-form *ngIf="!this.success" [form]="formGroup"
+  <formly-form *ngIf="!this.success && !this.noNewRevisions" [form]="formGroup"
     [fields]="formFields"
     [model]="formModel"
     (modelChange)="formModel = $event"></formly-form>
@@ -17,7 +17,7 @@
     <cvc-form-errors-alert [errors]="this.errorMessages">
     </cvc-form-errors-alert>
   </nz-form-item>
-  <ng-container *ngIf="this.success">
+  <ng-container *ngIf="this.success  && !this.noNewRevisions">
     <nz-alert nzType="success"
       nzMessage="Revision(s) Submitted"
       [nzDescription]="successMessage"
@@ -25,6 +25,16 @@
     <ng-template #successMessage
       nzSize="small">
       <p>View it on the <a routerLink="../../revisions">Revisions Page</a>.</p>
+    </ng-template>
+  </ng-container>
+  <ng-container *ngIf="this.noNewRevisions">
+    <nz-alert nzType="warning"
+      nzMessage="No New Revisions Created"
+      [nzDescription]="duplicateMessage"
+      nzShowIcon></nz-alert>
+    <ng-template #duplicateMessage
+      nzSize="small">
+      <p>Your submission succeeded but no new revisions were created. Identical ones already exist, view them on the <a routerLink="../../revisions">Revisions Page</a>.</p>
     </ng-template>
   </ng-container>
 </ng-template>
