Add CADD PHRED score in addition to existing raw score

--- a/client/src/app/components/variants/my-variant-info/my-variant-info.component.html
+++ b/client/src/app/components/variants/my-variant-info/my-variant-info.component.html
@@ -485,7 +485,11 @@
                     </ng-container>
                   </ng-container>
                 </td>
-                <td>{{ variantInfo.caddScore | ifEmpty: '--' }}</td>
+                <td>
+                  {{ variantInfo.caddScore | ifEmpty: '--' }} (raw)
+                  <br/>
+                  {{ variantInfo.caddPhred | ifEmpty: '--' }} (PHRED)
+                </td>
               </tr>
               <tr>
                 <td>FATHMM-MKL</td>
