--- a/client/src/app/components/clinical-trials/clinical-trials-table/clinical-trials-table.component.html
+++ b/client/src/app/components/clinical-trials/clinical-trials-table/clinical-trials-table.component.html
@@ -141,5 +141,6 @@
       nzSpin></i>
     <span>Loading…</span>
   </nz-tag>
+  <cvc-table-downloader [vars]="this.queryRef.variables" tableName="clinical_trials"></cvc-table-downloader>
   <cvc-no-more-rows [cvcShowTag]="noMoreRows$ | ngrxPush"></cvc-no-more-rows>
 </ng-template>
