--- a/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
+++ b/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
@@ -200,5 +200,6 @@
       nzSpin></i>
     <span>Loading…</span>
   </nz-tag>
+  <cvc-table-downloader [vars]="this.queryRef.variables" tableName="molecular_profiles"></cvc-table-downloader>
   <cvc-no-more-rows [cvcShowTag]="noMoreRows$ | ngrxPush"></cvc-no-more-rows>
 </ng-template>
