--- a/client/src/app/components/shared/table-downloader/table-downloader.component.html
+++ b/client/src/app/components/shared/table-downloader/table-downloader.component.html
@@ -1,6 +1,7 @@
 <button nz-button
   nzSize="small"
-  (click)="this.downloadTable()">
+  (click)="this.downloadTable()"
+  [disabled]="this.downloading | async">
   <span *ngIf="!(this.downloading | async)"nz-icon nzType="download" nzTheme="outline"></span>
   <span *ngIf="this.downloading | async" nz-icon nzType="sync" [nzSpin]="true"></span>
   Download Table
