--- a/client/src/app/components/sources/sources-table/sources-table.component.html
+++ b/client/src/app/components/sources/sources-table/sources-table.component.html
@@ -202,5 +202,6 @@
       nzSpin></i>
     <span>Loading…</span>
   </nz-tag>
+  <cvc-table-downloader [vars]="this.queryRef.variables" tableName="sources"></cvc-table-downloader>
   <cvc-no-more-rows [cvcShowTag]="noMoreRows$ | ngrxPush"></cvc-no-more-rows>
 </ng-template>
