update queries and routes to make org page tabs work correctly. fix external links

--- a/client/src/app/views/organizations/organizations-groups/organizations-groups.component.html
+++ b/client/src/app/views/organizations/organizations-groups/organizations-groups.component.html
@@ -1,5 +1,7 @@
-<ng-container *ngIf="(organizations$ | ngrxPush) as organizations">
-  <nz-space *ngFor="let organization of organizations" nzDirection="vertical">
-    <cvc-organization-card *nzSpaceItem [organization]="organization" ></cvc-organization-card>
-  </nz-space>
-</ng-container>
+<nz-spin [nzSpinning]="this.loading$ | ngrxPush">
+  <ng-container *ngIf="!(this.loading$ | ngrxPush)">
+    <nz-space *ngFor="let organization of organizations$ | ngrxPush" nzDirection="vertical">
+      <cvc-organization-card *nzSpaceItem [organization]="organization" ></cvc-organization-card>
+    </nz-space>
+  </ng-container>
+</nz-spin>
