change label from "Description" to "Statement"

--- a/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
@@ -9,7 +9,7 @@
           <nz-descriptions nzLayout="vertical"
             nzSize="small"
             nzBordered="true">
-            <nz-descriptions-item nzTitle="Description">
+            <nz-descriptions-item nzTitle="Statement">
               <p nz-typography
                 nzEllipsis
                 nzExpandable
